--- a/251118.md
+++ b/251118.md
@@ -18,5 +18,6 @@
 
 #### 인프런 강좌
 
+- 코딩테스트(파이썬) 강좌 1편 14분 30초
 - CS지식, DB, Docker, K8s, Nextjs, NestJs 강좌 구매
 - 강좌로 기초 지식 습득 후 토이 프로젝트라던가 직접 구현을 통해 학습하는 방식으로 학습 예정
